Bug 410758 - Cannot change timing for single occurrence
Summary: Cannot change timing for single occurrence
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: recurrence (other bugs)
Version First Reported In: 5.11.3
Platform: Other Linux
: NOR critical
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-09 10:13 UTC by isaac.o.braham
Modified: 2020-03-25 15:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description isaac.o.braham 2019-08-09 10:13:59 UTC
SUMMARY
Dragging a single occurrence of a repeating event brings up the dialog to change for 'Only This Item', but when this is selected, nothing happens. The event reverts to the same time as all other occurrences of the event.

STEPS TO REPRODUCE
1. Create a recurring event
2. Drag one occurrence to a different time, select 'Only this Item in the dialog box


OBSERVED RESULT
No change in the item timing


EXPECTED RESULT
The single occurrence should move to the location it's dragged to


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro 4.19/5.16.3
(available in About System)
KDE Plasma Version: 5.16.3
KDE Frameworks Version: 5.60
Qt Version: 5.13
Comment 1 David de Cos 2019-12-28 19:41:42 UTC
I can reproduce this bug in:

Linux/KDE Plasma: Neon 5.17
KDE Plasma Version: 5.17.4
KDE Frameworks Version: 5.65.0
Qt Version: 5.13.2

It happens, I think, regardless of the calendar type. I see it both in Google and CalDav calendars.

I really wish the recurrence problems could be fixed in Korganizer (this is just one of several). I missed a couple of appointments before realizing it wasn't reliable when recurrence was involved.
Comment 2 Daniel Vrátil 2020-03-21 12:45:59 UTC
Git commit 1e240368ed7cd0b015761ef214e5caf504e8f723 by Daniel Vrátil, on behalf of Shashwat Jolly.
Committed on 21/03/2020 at 12:45.
Pushed by dvratil into branch 'release/20.04'.

Fix bug where time of single instance of recurring event could not be changed

Summary:

- Removed QObject::connect calls in recurrenceactions.cpp as the required "clicked" signals are already handled in DialogButtonsHelper in kmessagebox
- Updated variable type for storing return value of createKMessageBox

Reviewers: mlaurent

Reviewed By: mlaurent

Subscribers: winterz, mlaurent, kde-pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D28149

M  +1    -5    src/recurrenceactions.cpp

https://commits.kde.org/kcalutils/1e240368ed7cd0b015761ef214e5caf504e8f723
Comment 3 David de Cos 2020-03-25 15:51:28 UTC
This is great news, many thanks to the developers involved.