Fix bug where time of single instance of recurring event could not be changed

Summary:
BUG: 410758

- Removed QObject::connect calls in recurrenceactions.cpp as the required "clicked" signals are already handled in DialogButtonsHelper in kmessagebox
- Updated variable type for storing return value of createKMessageBox

Reviewers: mlaurent

Reviewed By: mlaurent

Subscribers: winterz, mlaurent, kde-pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D28149